[gd_scene load_steps=6 format=3 uid="uid://c57u187iciexi"]

[ext_resource type="Script" uid="uid://i4p62x8fnqpn" path="res://Scripts/GL_Node_Map.gd" id="1_jyqbx"]
[ext_resource type="PackedScene" uid="uid://mowdu1i1rldt" path="res://Scenes/UI/Search.tscn" id="1_xwfut"]
[ext_resource type="Texture2D" uid="uid://cvudj0qai2hrn" path="res://UI/Nodes/Backing.jpg" id="2_msys2"]
[ext_resource type="Shader" uid="uid://dx643ne23bukf" path="res://Materials/Node Map.gdshader" id="2_x1ecx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1m68g"]
shader = ExtResource("2_x1ecx")
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_scale = Vector2(1, 1)

[node name="NodeMap" type="Control" groups=["Node Map"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jyqbx")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_1m68g")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_msys2")
expand_mode = 1
stretch_mode = 1

[node name="Holder" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="OptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
selected = 0
item_count = 1
popup/item_0/text = "Test"
popup/item_0/id = 0

[node name="Button4" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Edit"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Search"

[node name="Search" parent="." instance=ExtResource("1_xwfut")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
offset_left = -211.0
offset_top = -253.0
offset_right = -11.0
offset_bottom = -53.0
grow_horizontal = 0
grow_vertical = 0

[node name="Edit Menu" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -95.0
offset_right = 200.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Edit Menu"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Edit Menu/MarginContainer"]
layout_mode = 2

[node name="Title" type="LineEdit" parent="Edit Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Save Title"

[node name="MarginContainer" type="MarginContainer" parent="Edit Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Edit Menu/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Author" type="LineEdit" parent="Edit Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Author"

[node name="Made In" type="Label" parent="Edit Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Made in Give-LIFE v.0.0.0.0.0.0.1"

[node name="Created" type="Label" parent="Edit Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Created: 10:00pm July 24th"

[node name="Updated" type="Label" parent="Edit Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Last Updated: 2:00pm December 9th"

[connection signal="pressed" from="MarginContainer/HBoxContainer/Button4" to="." method="_edit_button_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Button2" to="." method="save_everything"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Button3" to="Search" method="toggleSearch"]
[connection signal="text_changed" from="Edit Menu/MarginContainer/VBoxContainer/Title" to="." method="title_changed"]
[connection signal="text_changed" from="Edit Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Author" to="." method="author_changed"]
